# KeePassGitSync

./: .gitignore  KeePassGitSync.bat  README.md  README.txt  backup.py  config.json  pyproject.toml
keepassgitsync/: __init__.py  backup.py  config.py  console.py  git.py
tests/: test_keepassgitsync.py
